[project]
name = "mazegen"
version = "1.0.0"
description = ""
authors = [
    {name = "Jesus Rosales",email = "jr.jobs.1509@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "pytest (>=9.0.3,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
